feat: add delete feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
     <input type="checkbox" name="" id="" [checked]="todo.status !== 'waiting'">
     
     {{ todo.task }}
-    <button class="delete"  (click)="deleteTodo(i)"><i class="fa fa-trash"></i></button>
+    <button class="delete"  (click)="deleteTodo(i)"><i class="fas fa-trash"></i></button>
   </div>
 
 
